--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oyunjs",
+  "name": "@html5oyun/oyunjs",
   "version": "3.5.0",
   "description": "HTML5 Game Development Library",
   "main": "oyun.js",
